--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,36 @@
  * Copyright 2011-2019 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
+ .myButton {
+  background-color:#768d87;
+  border-radius:28px;
+  border:1px solid #566963;
+  display:inline-block;
+  cursor:pointer;
+  color:#ffffff;
+  font-family:Arial;
+  font-size:17px;
+  padding:16px 31px;
+  text-decoration:none;
+  text-shadow:0px 1px 0px #2b665e;
+}
+.myButton:hover {
+  background-color:#6c7c7c;
+}
+.myButton:active {
+  position:relative;
+  top:1px;
+}
+.myform {
+width: 300px;
+margin: 20px auto;
+background: #fff;
+padding: 15px;
+overflow: hidden;
+-moz-border-radius: 20px;
+-webkit-border-radius: 20px;
+border-radius: 20px;
+}
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
